Adding The Game Of Life and Patching bugs