@@ -6,7 +6,12 @@
 
     <groupId>fr.xibalba</groupId>
     <artifactId>game</artifactId>
+    <packaging>pom</packaging>
     <version>1.1-SNAPSHOT</version>
+    <modules>
+        <module>2048</module>
+        <module>GameOfLife</module>
+    </modules>
     <name>Pong</name>
 
     <properties>
@@ -235,33 +240,4 @@
             <version>0.4.0</version>
         </dependency>-->
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>16</source>
-                    <target>16</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.6</version>
-                <executions>
-                    <execution>
-                        <!-- Default configuration for running with: mvn clean javafx:run -->
-                        <id>default-cli</id>
-                        <configuration>
-                            <mainClass>fr.xibalba.game.pong/fr.xibalba.game.pong.HelloApplication</mainClass>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
